# swin-squad-bot

./: .gitignore  Cargo.toml  README.md
bot/: Cargo.toml  LICENSE
bot/src/: main.rs
cs_handbook/: Cargo.toml
cs_handbook/src/: db.rs  lib.rs  main.rs  models.rs  scraper.rs
server/: Cargo.toml
server/src/: error.rs  handlers.rs  main.rs  utils.rs
src/: main.rs
